--- a/package.json
+++ b/package.json
@@ -17,16 +17,20 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
+    "d3-ease": "^1.0.5",
     "date-fns": "^2.27.0",
     "html-react-parser": "^1.4.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "lodash": "^4.17.11",
     "react": "^17.0.2",
+    "react-circular-progressbar": "^2.0.1",
     "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2",
     "react-html2pdf": "^1.0.1",
     "react-icons": "^4.3.1",
     "react-modal": "^3.14.4",
+    "react-move": "^5.2.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
@@ -65,6 +69,7 @@
     ]
   },
   "devDependencies": {
+    "@types/d3-ease": "^3.0.0",
     "@types/react-html-parser": "^2.0.2",
     "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.2",
