--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "lodash": "^4.17.11",
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.1",
+    "react-date-picker": "^8.4.0",
     "react-dom": "^17.0.2",
+    "react-dropdown-select": "^4.8.3",
     "react-html-parser": "^2.0.2",
     "react-html2pdf": "^1.0.1",
     "react-icons": "^4.3.1",
@@ -70,6 +72,7 @@
   },
   "devDependencies": {
     "@types/d3-ease": "^3.0.0",
+    "@types/jquery": "^3.5.14",
     "@types/react-html-parser": "^2.0.2",
     "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.2",
